--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~10.2.0",
+        "@angular/animations": "^11.0.9",
         "@angular/common": "~10.2.0",
         "@angular/compiler": "~10.2.0",
         "@angular/core": "~10.2.0",
