--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser-dynamic": "~10.2.0",
         "@angular/router": "~10.2.0",
         "@fullhuman/postcss-purgecss": "^3.0.0",
+        "animate.css": "^4.1.1",
         "postcss": "^8.1.14",
         "rxjs": "~6.6.0",
         "tailwindcss": "^2.0.1",
